[gd_scene load_steps=4 format=3 uid="uid://ckbnfxtwa4po5"]

[ext_resource type="Texture2D" uid="uid://bdwf03025qcs" path="res://textures/1-caracas-without-mining.png" id="1_jxb3w"]
[ext_resource type="Script" uid="uid://bxk7s0313hxvr" path="res://scripts/turn_actions.gd" id="1_tu0j1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5sy4"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 0.8627451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="TurnActions" type="FoldableContainer"]
custom_minimum_size = Vector2(320, 0)
size_flags_horizontal = 8
title = "Current Turn:"
script = ExtResource("1_tu0j1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TimerContainer" type="HBoxContainer" parent="MarginContainer/Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/Content/TimerContainer"]
layout_mode = 2
text = "Time"

[node name="TimerBar" type="ProgressBar" parent="MarginContainer/Content/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 60.0
step = 1.0

[node name="TimerLabel" type="Label" parent="MarginContainer/Content/TimerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "30s"

[node name="HBoxContainer" type="BoxContainer" parent="MarginContainer/Content"]
layout_mode = 2
theme_override_constants/separation = 20
vertical = true

[node name="MovementContainer" type="BoxContainer" parent="MarginContainer/Content/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15
vertical = true

[node name="TileTypeLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/MovementContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You landed on a: Property"
horizontal_alignment = 1

[node name="MovementResult" type="BoxContainer" parent="MarginContainer/Content/HBoxContainer/MovementContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="MovementButton" type="Button" parent="MarginContainer/Content/HBoxContainer/MovementContainer/MovementResult"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Roll Dices"

[node name="DicePanel1" type="Panel" parent="MarginContainer/Content/HBoxContainer/MovementContainer/MovementResult"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u5sy4")

[node name="DiceLabel1" type="Label" parent="MarginContainer/Content/HBoxContainer/MovementContainer/MovementResult/DicePanel1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " "
horizontal_alignment = 1
vertical_alignment = 1

[node name="DicePanel2" type="Panel" parent="MarginContainer/Content/HBoxContainer/MovementContainer/MovementResult"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u5sy4")

[node name="DiceLabel2" type="Label" parent="MarginContainer/Content/HBoxContainer/MovementContainer/MovementResult/DicePanel2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = " "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PropertyContainer" type="VBoxContainer" parent="MarginContainer/Content/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Content/HBoxContainer/PropertyContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="HBoxContainer" type="BoxContainer" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
vertical = true

[node name="PriceLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1"

[node name="OwnerLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1"

[node name="TollLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Energy Toll"

[node name="PayoutLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer/BoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Payout"

[node name="Image" type="TextureRect" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_jxb3w")
expand_mode = 5

[node name="BuyContainer" type="VBoxContainer" parent="MarginContainer/Content/HBoxContainer/PropertyContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="BuyLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/BuyContainer"]
layout_mode = 2
text = "Buy Property"
horizontal_alignment = 1

[node name="BuyButtons" type="HBoxContainer" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/BuyContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BuyFiatButton" type="Button" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/BuyContainer/BuyButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "0.00 (fiat)"

[node name="BuyBitcoinButton" type="Button" parent="MarginContainer/Content/HBoxContainer/PropertyContainer/BuyContainer/BuyButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "0.0000 (btc)"
disabled = true

[node name="PayTollContainer" type="VBoxContainer" parent="MarginContainer/Content/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
visible = false
theme_override_constants/separation = 8

[node name="PayTollLabel" type="Label" parent="MarginContainer/Content/HBoxContainer/PayTollContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Pay Energy Toll"
horizontal_alignment = 1

[node name="PayTollButtons" type="HBoxContainer" parent="MarginContainer/Content/HBoxContainer/PayTollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PayTollFiatButton" type="Button" parent="MarginContainer/Content/HBoxContainer/PayTollContainer/PayTollButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
text = "0.00 (fiat)"

[node name="PayTollBitcoinButton" type="Button" parent="MarginContainer/Content/HBoxContainer/PayTollContainer/PayTollButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
text = "0.00 (btc)"
disabled = true

[node name="EndTurnButton" type="Button" parent="MarginContainer/Content/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
text = " End  Turn"
